--- a/styles/blog.css
+++ b/styles/blog.css
@@ -106,6 +106,17 @@ hr {
   width: 100%;
   display: block;
 }
+.post_text {
+  padding: 5%;
+  border-color: transparent;
+  font-size: 20px;
+}
+
+.post_text iframe {
+  margin: 5% 0 5% 0;
+  width: 100%;
+  height: 300px;
+}
 
 .posts a {
   display: flex;
@@ -170,29 +181,6 @@ hr {
   margin-right: auto;
 }
 
-.me_on_github {
-  margin-top: 40%;
-  margin-bottom: 10%;
-  font-size: 12px;
-  transition: all 1s ease;
-  width: 100% !important;
-}
-
-.gitHubProfile {
-  display: inline-block;
-  overflow: hidden;
-  line-height: 1;
-  vertical-align: middle;
-  border-radius: 6px;
-  flex-shrink: 0;
-  border-radius: 50% !important;
-  border: 1px solid #333;
-}
-
-.me_on_github p {
-  padding-top: 16px !important;
-}
-
 .rightcolumn ol {
   list-style-type: none;
 }
@@ -205,31 +193,20 @@ hr {
 }
 
 .rightcolumn li:before {
-  content: "*";
+  content: "\26AB";
   background-color: #333;
+  font-size: 5px;
   position: absolute;
   bottom: 0;
   top: 0;
-  left: 1px;
+  left: 2px;
   border-radius: 2px;
-  width: 2px;
+  width: 4px;
 }
 
 .rightcolumn li::content {
   color: red !important;
   font-size: 100px !important;
-}
-
-.post_text {
-  padding: 5%;
-  border-color: transparent;
-  font-size: 20px;
-}
-
-.post_text iframe {
-  margin: 5% 0 5% 0;
-  width: 100%;
-  height: 300px;
 }
 
 .card {
@@ -503,3 +480,15 @@ article {
 }
 
 /*end blog*/
+datalist {
+  position: absolute;
+  background-color: white;
+  border: 1px solid blue;
+  border-radius: 0 0 5px 5px;
+  border-top: none;
+  font-family: sans-serif;
+  width: 350px;
+  padding: 5px;
+  max-height: 10rem;
+  overflow-y: auto;
+}
