change links on categories

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -9,9 +9,9 @@ html {
   font-family: "Roboto", sans-serif;
   margin: 0;
   padding: 0px;
+  background-color: black;
 }
 body {
-  color: #ffffff;
   margin: 0;
   padding: 0;
   min-height: 100%;
