--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -12,6 +12,7 @@ html {
   background-color: black;
 }
 body {
+  color: #ffffff;
   margin: 0;
   padding: 0;
   min-height: 100%;
@@ -19,7 +20,7 @@ body {
 
   z-index: -1;
   &::before {
-    background-image: url("./assets//pawel-czerwinski-IcOg3D9yh0o-unsplash.jpg");
+    background-image: url("./assets/305484.jpg");
     background-repeat: no-repeat;
     background-position: center top;
     background-size: cover;
