--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -39,10 +39,9 @@
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #0d1117;
+  background-color: #111;
   overflow-x: hidden;
-  border-right: 3px solid #333;
-  transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
+  border-right: 1px solid #333;
 }
 .app__navbar-overylay_background {
   position: absolute;
@@ -53,7 +52,6 @@
   background: rgba(0, 0, 0, 0.5);
   height: 100vh;
   flex-direction: row;
-  transition: 0.3s;
 }
 
 .overlay__close {
@@ -76,7 +74,7 @@
   color: white;
   line-height: 2em;
   font-family: "Oswald", sans-serif;
-  background: linear-gradient(to left, #0d1117 50%, #161b22 50%) right;
+  background: linear-gradient(to left, #111 50%, #161b22 50%) right;
   background-size: 500%;
   padding-left: 10%;
   height: 70px;
