--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -17,13 +17,12 @@ body {
   padding: 0;
   min-height: 100%;
   position: relative;
-  background-color: black;
+
   z-index: -1;
   &::before {
     background-image: url("./assets/305484.jpg");
     background-repeat: no-repeat;
-    background-position: center top;
-    background-size: cover;
+    background-size: 120% 2000px, 100% auto;
     content: "";
     height: 100%;
     left: 0;
