--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -147,3 +147,8 @@ a {
 }
 
 /*end global*/
+
+.backgroundIssue {
+  background-image: (url("./assets/wallpaperflare.com_wallpaper.jpg"));
+  color: #333;
+}
