change navbar background

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -149,6 +149,8 @@ a {
 /*end global*/
 
 .backgroundIssue {
-  background-image: (url("./assets/wallpaperflare.com_wallpaper.jpg"));
+  background-image: (
+    url("./assets/wallpaperflare.com_wallpaper-removebg-preview.png")
+  );
   color: #333;
 }
