--- a/styles/aboutme.css
+++ b/styles/aboutme.css
@@ -475,7 +475,8 @@ textarea {
   width: 50%;
   margin: auto;
   margin-top: 10%;
-  background-color: white;
+
+  background-color: #ffff;
   padding: 20px;
 }
 
