--- a/styles/blog.css
+++ b/styles/blog.css
@@ -1,10 +1,8 @@
 /*blog*/
 .header {
-  padding: 30px;
-  font-size: 40px;
   text-align: center;
-  font-size: 50px !important;
-  margin-top: 5%;
+
+  margin-top: 10%;
 }
 .wrapper {
   border: 1px solid #494949;
@@ -13,9 +11,9 @@
 
 .header img {
   display: block;
-  width: 100%;
-  height: 20vw;
-  object-fit: contain;
+  width: 100% !important;
+  height: 300px !important;
+  object-fit: cover;
 }
 
 .search {
@@ -75,6 +73,7 @@
   transition: 0.7s;
 }
 .section li {
+  margin-top: 5%;
   color: #f9b22a;
 }
 .section div {
@@ -176,7 +175,7 @@ hr {
   height: 100vh;
   position: -webkit-sticky;
   position: sticky;
-  top: 0px;
+  top: 50px;
   margin-right: auto;
 }
 
