--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -15,9 +15,10 @@
   z-index: 1000 !important;
 }
 .slideMenu {
-  -webkit-animation: slideIn 0.5s forwards;
-  -moz-animation: slideIn 0.5s forwards;
-  animation: slideIn 0.5s forwards;
+  -webkit-animation: slideIn 0.5s ease-in-out;
+  -moz-animation: slideIn 0.5s ease-in-out;
+  animation: slideIn 0.5s ease-in-out;
+  transition: 0.25s;
 }
 
 @-webkit-keyframes slideIn {
