--- a/styles/landingPage.scss
+++ b/styles/landingPage.scss
@@ -65,7 +65,7 @@
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
-  display: block;
+  display: flex;
   overflow: hidden;
   padding: 0.4em;
   -webkit-box-orient: vertical;
