change some things

--- a/styles/landingPage.scss
+++ b/styles/landingPage.scss
@@ -208,7 +208,7 @@
   background-size: contain;
   overflow: auto;
   background-repeat: no-repeat;
-  background-image: url("./assets/background.jpg");
+  background-color: #181818;
   background-size: 100% 100%;
   background-position: center;
 }
