--- a/styles/blog.css
+++ b/styles/blog.css
@@ -5,7 +5,8 @@
   margin-top: 10%;
 }
 .wrapper {
-  width: 70% !important;
+  width: 70%;
+  margin: auto;
 }
 
 .header img {
@@ -143,14 +144,13 @@ hr {
   margin: 0 auto;
   text-align: left;
   min-height: 100vh;
-  background-color: #1a1a1a;
   padding: 5%;
   width: 75%;
   margin-left: auto !important;
 }
 .row {
   margin: auto;
-  background-color: #1a1a1a;
+  background: linear-gradient(#010103, #000340);
 }
 
 .leftcolumn {
@@ -168,7 +168,7 @@ hr {
   transition: 0.1s ease;
   float: right;
   width: 25%;
-  background-color: #1a1a1a;
+  background-color: transparent;
   box-sizing: border-box;
   padding: 1.5%;
   height: 100vh;
@@ -179,7 +179,7 @@ hr {
 }
 
 .card {
-  background-color: #0d1117;
+  background-color: #010103 !important;
   /* color: rgb(217, 216, 216); */
   border-radius: 10px;
   padding: 25px;
@@ -189,7 +189,6 @@ hr {
 .inner_post_text {
   border: 1px solid #333;
   border-radius: 30px;
-  background-color: #18191a;
   margin-top: 5px;
   padding: 2%;
 }
@@ -200,7 +199,6 @@ hr {
   padding: 5%;
   margin: auto;
   margin-top: 2%;
-  background-color: #18191a;
 
   -webkit-transform-origin: 0% 100%;
   -ms-transform-origin: 0% 100%;
