--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,14 +2,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@300;400&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Paytone+One&display=swap");
 html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   behavior: smooth;
   font-family: "Roboto", sans-serif;
   margin: 0;
   padding: 0px;
-  background-color: black;
+
   height: 100%;
 }
 body {
@@ -19,6 +19,19 @@ body {
   min-height: 100%;
   position: relative;
   background: #457b9d;
+}
+.blurBackground {
+  filter: blur(4px);
+  -webkit-filter: blur(4px);
+  box-shadow: 0px 5px 5px #457b9d;
+  transition: ease-out 1s;
+}
+.siteLogo {
+  font-family: "Paytone One", sans-serif;
+  font-size: 80px;
+  background: -webkit-linear-gradient(pink, blue);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .buttonGit {
