--- a/styles/landingPage.scss
+++ b/styles/landingPage.scss
@@ -258,8 +258,13 @@ img {
 }
 @media screen and (max-width: 991px) {
   .is-home-main {
-    width: 100% !important;
-    height: 100vh !important;
+    width: 90% !important;
+    height: 80vh !important;
+    margin: auto;
+    margin-top: 10%;
+  }
+  .siteLogo {
+    font-size: 35px;
   }
   .landingPage {
     margin: 0% !important;
