--- a/styles/blog.css
+++ b/styles/blog.css
@@ -5,7 +5,7 @@
   margin-top: 10%;
 }
 .wrapper {
-  width: 70%;
+  width: 100%;
   margin: auto;
 }
 
@@ -145,7 +145,7 @@ hr {
   text-align: left;
   min-height: 100vh;
   padding: 5%;
-  width: 75%;
+  width: 65%;
   margin-left: auto !important;
 }
 .row {
@@ -153,21 +153,10 @@ hr {
   background: linear-gradient(#010103, #000340, #000350);
 }
 
-.leftcolumn {
-  float: left;
-  width: 15%;
-  height: 100% !important;
-  box-sizing: border-box;
-  padding: 1.5%;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0px;
-  transition: 1s ease;
-}
 .rightcolumn {
   transition: 0.1s ease;
   float: right;
-  width: 25%;
+  width: 20%;
   background-color: transparent;
   box-sizing: border-box;
   padding: 1.5%;
@@ -175,7 +164,7 @@ hr {
   position: -webkit-sticky;
   position: sticky;
   top: 50px;
-  margin-right: auto;
+  margin-right: 5%;
 }
 
 .card {
@@ -193,9 +182,9 @@ hr {
 
 .initial-post {
   border-bottom: 1px solid #333;
-  width: 100%;
+  width: 70%;
   padding: 5%;
-  margin: auto;
+
   margin-top: 2%;
 
   -webkit-transform-origin: 0% 100%;
@@ -203,9 +192,13 @@ hr {
   transform-origin: 0% 100%;
 }
 .inner_post_text:hover {
-  transition: ease-in-out 0.3s;
-  opacity: 0.3;
+  opacity: 0.9;
   cursor: pointer;
+}
+.inner_post_text:hover h3 {
+  color: blue;
+  text-decoration: underline;
+  transition: ease-in-out 0.3s;
 }
 
 /* Clear floats after the columns */
