--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -18,12 +18,12 @@ body {
   padding: 0;
   min-height: 100%;
   position: relative;
-  background: #457b9d;
+  background: linear-gradient(180deg, #010103, #000340, #000350);
 }
 .blurBackground {
   filter: blur(4px);
   -webkit-filter: blur(4px);
-  box-shadow: 0px 5px 5px #457b9d;
+  box-shadow: 0px 1px 1px #457b9d;
   transition: ease-out 1s;
 }
 .siteLogo {
@@ -32,19 +32,6 @@ body {
   background: -webkit-linear-gradient(pink, blue);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-}
-
-.buttonGit {
-  width: 50px;
-  color: black;
-  border-color: #333;
-  height: 40px;
-
-  position: absolute;
-  top: 80px;
-  left: 0 !important;
-  transition: 1s ease;
-  z-index: 999;
 }
 
 /* width */
