--- a/styles/blog.css
+++ b/styles/blog.css
@@ -1,20 +1,4 @@
 /*blog*/
-.header {
-  text-align: center;
-
-  margin-top: 10%;
-}
-.wrapper {
-  width: 100%;
-  margin: auto;
-}
-
-.header img {
-  display: block;
-  width: 100% !important;
-  height: 300px !important;
-  object-fit: cover;
-}
 
 .search {
   position: relative;
@@ -30,22 +14,19 @@
 
 .input {
   padding: 15px;
-  width: 80%;
-  height: 10px;
-  background: none;
-  border: 1px solid #238636;
+  width: 20%;
+  background: #333;
+  box-shadow: inset 5px 5px 8px #000, inset -2px -2px 4px black;
   border-radius: 5px;
   box-sizing: border-box;
-  font-size: 16px;
-  color: black;
+  font-size: 20px;
   outline: none;
   transition: 0.5s;
+  color: white;
 }
 
 .box input:hover {
-  color: black;
-  border-radius: 80px !important;
-  background-color: #f9b22a;
+  background-color: #4ba6e7;
 }
 
 .search i {
@@ -94,12 +75,18 @@ hr {
   display: block;
   margin-bottom: 4vh;
 }
-
+.section {
+  box-shadow: inset 5px 5px 8px #000, inset -2px -2px 4px #636363;
+  padding: 10%;
+}
+.dropdown {
+  box-shadow: inset 5px 5px 8px #000, inset -2px -2px 4px #636363;
+}
 .columns .title {
   margin-top: 20% !important;
   background-color: #111;
   color: white;
-  padding: 5=25px;
+  padding: 5px;
   text-align: left;
   width: 100%;
   display: block;
@@ -145,26 +132,22 @@ hr {
   text-align: left;
   min-height: 100vh;
   padding: 5%;
-  width: 65%;
+  width: 75%;
   margin-left: auto !important;
 }
-.row {
-  margin: auto;
-  background: linear-gradient(#010103, #000340, #000350);
+.postPage {
+  background-color: #202124;
 }
-
 .rightcolumn {
   transition: 0.1s ease;
   float: right;
-  width: 20%;
+  width: 25%;
   background-color: transparent;
   box-sizing: border-box;
   padding: 1.5%;
-  height: 100vh;
   position: -webkit-sticky;
   position: sticky;
   top: 50px;
-  margin-right: 5%;
 }
 
 .card {
@@ -365,6 +348,7 @@ hr {
   will-change: transform;
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
+  box-shadow: inset 5px 5px 8px #000, inset -2px -2px 4px #636363;
 }
 
 .btn_wrap:hover {
@@ -406,7 +390,6 @@ hr {
   text-align: center;
   line-height: 70px;
   color: #eeeeed;
-  background-color: #282828;
   width: 100px;
   -webkit-transition: all 0.8s ease;
   transition: all 0.8s ease;
@@ -447,18 +430,6 @@ article {
 }
 
 /*end blog*/
-datalist {
-  position: absolute;
-  background-color: white;
-  border: 1px solid blue;
-  border-radius: 0 0 5px 5px;
-  border-top: none;
-  font-family: sans-serif;
-  width: 350px;
-  padding: 5px;
-  max-height: 10rem;
-  overflow-y: auto;
-}
 
 .video-card video {
   width: 100% !important;
