--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -18,7 +18,7 @@ body {
   padding: 0;
   min-height: 100%;
   position: relative;
-  background: linear-gradient(180deg, #010103, #000350, #000350);
+  background: linear-gradient(184deg, #010103, #1a1a1a, #262626);
 }
 .header {
   text-align: center;
