--- a/styles/blog.css
+++ b/styles/blog.css
@@ -3,7 +3,7 @@
 .search {
   position: relative;
   display: flex;
-  padding: 15px;
+  padding: 20px;
   margin-bottom: 5px;
 }
 
@@ -11,33 +11,72 @@
   position: relative;
   width: 100% !important;
 }
+::placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: white;
+  opacity: 1; /* Firefox */
+}
 
-.input {
-  padding: 15px;
-  width: 20%;
-  background: #333;
-  box-shadow: inset 5px 5px 8px #000, inset -2px -2px 4px black;
-  border-radius: 5px;
-  box-sizing: border-box;
-  font-size: 20px;
-  outline: none;
-  transition: 0.5s;
+:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
   color: white;
 }
 
-.box input:hover {
-  background-color: #4ba6e7;
+::-ms-input-placeholder {
+  /* Microsoft Edge */
+  color: white;
+}
+input:focus::placeholder {
+  color: transparent;
 }
 
-.search i {
+.input {
+  padding: 10px;
+  background-color: transparent;
+  width: 45px;
+  box-sizing: border-box;
+  background-position: left top;
+  -webkit-transition: width 0.2s;
   position: absolute;
-  transition: 0.2s;
+  top: 0;
+  right: 0;
+  font-size: 20px !important;
+  outline: none;
+  transition: 0.5s;
+  border: none;
+  font-size: 15px;
+  color: white;
+  border-radius: 100%;
+  border: 1px solid white;
+  opacity: 0.8;
+  background-color: white;
 }
 
-.box:hover i {
-  opacity: 0;
-}
+.box .input:focus {
+  background-color: #4ba6e7;
+  width: 20%;
+  height: 40px;
 
+  background: #333;
+  border-radius: 5px;
+  box-shadow: inset 5px 5px 8px #000, inset -2px -2px 4px black;
+}
+.categoriesSearch {
+  width: 200px;
+  height: 40px;
+  background: #333;
+  border-radius: 5px;
+  border: none;
+  padding: 1%;
+  margin-top: 1%;
+  box-shadow: inset 5px 5px 8px #000, inset -2px -2px 4px black;
+}
+.categoriesSearch:focus {
+  background-color: #4ba6e7;
+  border-radius: 5px;
+  color: white;
+  font-size: 20px;
+}
 .categories a {
   display: inline-block;
   padding: 0.2rem 1rem;
