--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -59,24 +59,27 @@ body {
 
 /* width */
 ::-webkit-scrollbar {
-  width: 13px;
+  width: 15px;
+  background-color: black;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey;
+  box-shadow: inset 0 0 5px #457b9d;
   border-radius: 10px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #333;
-  border-bottom: 10px;
+  background-color: transparent;
+  border-top: 60px solid #333 /*or any height and color you want*/;
+  border-radius: 10px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #333;
+  background-color: transparent;
+  border-top: 60px solid #457b9d /*or any height and color you want*/;
 }
 
 .p__opensans {
@@ -261,9 +264,9 @@ textarea {
 }
 
 .slide {
-  -webkit-animation: slideIn 0.5s forwards;
-  -moz-animation: slideIn 0.5s forwards;
-  animation: slideIn 0.5s forwards;
+  -webkit-animation: slideIn 0.3s forwards;
+  -moz-animation: slideIn 0.3s forwards;
+  animation: slideIn 0.3s forwards;
 }
 
 @-webkit-keyframes slideIn {
