--- a/styles/blog.css
+++ b/styles/blog.css
@@ -496,3 +496,49 @@ article {
   font-size: 50px;
   border: 0px;
 }
+
+.settingBtn {
+  width: 40px;
+  height: 40px;
+  font-size: 20x;
+  transition: 0.5s ease;
+}
+button#white {
+  margin-left: 10px;
+  border: 1px solid #636363;
+  border-radius: 100%;
+  width: 40px;
+  height: 40px;
+  font-size: 20x;
+  transition: 0.5s ease;
+  background: linear-gradient(
+    0deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0) 50%,
+    rgba(255, 255, 255, 10) 51%
+  );
+}
+button#dark {
+  border: 1px solid #636363;
+  border-radius: 100%;
+  margin-left: 20px;
+  width: 40px;
+  height: 40px;
+  font-size: 20x;
+  transition: 0.5s ease;
+  background: linear-gradient(
+    0deg,
+    rgba(255, 255, 255, 10) 0%,
+    rgba(255, 255, 255, 10) 50%,
+    rgba(255, 255, 255, 0) 51%
+  );
+}
+.settingBtn:hover {
+  background-color: #238636;
+  cursor: pointer;
+}
+
+#dark:hover,
+#white:hover {
+  opacity: 0.3;
+}
