--- a/styles/footer.css
+++ b/styles/footer.css
@@ -15,6 +15,7 @@
   opacity: 0.8;
 }
 .footer {
+  margin-top: 100px;
   font-family: "Play", sans-serif;
   text-align: center;
   border-top: 1px solid #333;
