--- a/styles/blog.scss
+++ b/styles/blog.scss
@@ -189,6 +189,7 @@ hr {
   padding: 5%;
   width: 75%;
   margin-left: auto !important;
+  z-index: 10;
 }
 
 .postPage .midcolumn {
@@ -218,6 +219,7 @@ hr {
   position: sticky;
   top: 50px;
   margin: auto;
+  z-index: 10;
 }
 
 .card {
