--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,4 +1,5 @@
 footer {
+  margin-top: 5px;
   color: #6faaff;
   background-color: #333;
   border-radius: 58% 42% 100% 0% / 30% 100% 0% 70%;
@@ -77,7 +78,7 @@ footer ul.social-icons li:hover a {
 footer .copyright {
   text-align: center;
   color: #fff;
-  background-color: #6faaff;
+  background-color: purple;
   padding: 0.6rem 0;
 }
 
