--- a/styles/modal.css
+++ b/styles/modal.css
@@ -106,4 +106,11 @@ span.psw {
     box-shadow: none;
     border: none;
   }
+  .section_our_solution {
+    width: 100%;
+  }
+  .mywork .rightcolumn {
+    border: none !important;
+    margin-bottom: 80%;
+  }
 }
